# PLDM_PARS

./: CMakeLists.txt  ReadMe.txt
in_out/: mcout.json
inc/: global.h  json.h  pars.h
src/: json.c  main.c  pars.c
